sis_sources/tests/errors/empty_string_falsy.sis
pin x = "";
if (x) { print("not empty"); } else { print("was empty"); }
